--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -211,6 +211,7 @@ pre {
 <body>
 
 <section class='container'>
+<h1> Code Testing </h1>
           <hgroup>
             <h1>Welcome to your Django application on OpenShift</h1>
           </hgroup>
