--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -211,9 +211,9 @@ pre {
 <body>
 
 <section class='container'>
-<h1> Code Testing </h1>
+
           <hgroup>
-            <h1>Welcome to your Django application on OpenShift</h1>
+            <h1>Welcome to your Django application on OpenShift With Subru</h1>
           </hgroup>
 
 
